# The-Recommender

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_reproduction.yml
.github/workflows/: ci.yml
configs/: s4rec_amazon_beauty.yaml  sasrec_amazon_beauty.yaml  synthetic_quick.yaml
docs/: _config.yml  architecture.md  deployment.md  experiments.md  index.md  reproducibility.md  s4_kernel.md
scripts/: benchmark_s4_classification.py  download_data.py  evaluate.py  train.py
src/recommender/: __init__.py  cli.py  inference.py  pipeline.py  serve.py
src/recommender/data/: __init__.py  amazon.py  dataset.py  splits.py
src/recommender/models/: __init__.py  base.py  s4_classifier.py  s4rec.py  sasrec.py
src/recommender/models/s4/: __init__.py  discretization.py  hippo.py  kernel.py  s4_layer.py
src/recommender/training/: __init__.py  losses.py  metrics.py  trainer.py
src/recommender/utils/: __init__.py  config.py  logging.py  seed.py
tests/: test_data_splits.py  test_discretization.py  test_hippo.py  test_metrics.py  test_models.py  test_s4_kernel.py
