[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-recommender"
version = "0.4.0"
description = "State-space (S4) sequential recommender for next-item prediction, benchmarked against a SASRec self-attention baseline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Madhvansh" }]
keywords = [
    "recommender-systems",
    "sequential-recommendation",
    "state-space-models",
    "s4",
    "structured-state-space",
    "pytorch",
    "sasrec",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/Madhvansh/The-Recommender"
Repository = "https://github.com/Madhvansh/The-Recommender"

[project.scripts]
recommender = "recommender.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E741"]  # ambiguous variable names (A, B, C are standard SSM notation)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
